[package]
name = "url-wasm"
description = "WHATWG URL Parser written in Rust compiled to WebAssembly"
repository = "https://github.com/anonrig/url"
license = "MIT"
version = "0.1.0"
authors = ["Yagiz Nizipli <yagiz@nizipli.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
percent-encoding = "2.1.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
