[package]
name = "url"
description = "WHATWG URL Parser written in Rust compiled to WebAssembly"
repository = "https://github.com/anonrig/url"
license = "MIT"
version = "0.1.0"
authors = ["Yagiz Nizipli <yagiz@nizipli.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.56"
wasm-bindgen = "0.2.79"
wee_alloc = "0.4.5"
