[package]
name = "url"
description = "WHATWG URL Parser written in Rust compiled to WebAssembly"
repository = "https://github.com/anonrig/url"
license = "MIT"
version = "0.1.0"
authors = ["Yagiz Nizipli <yagiz@nizipli.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.56"
serde-wasm-bindgen = "0.4.2"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[profile.release]
# Enable link-time optimization.
# This makes the compiled code faster and smaller, but it makes compiling slower.
lto = true
